[package]
name = "walletmanagermock"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
tokio = { version = "1.45.0", features = ["full"] }
anyhow = "1.0"
log = "0.4.27"
dashmap = { version = "6.1.0"}
env_logger = "0.11"